gcc-14.2.0/gcc/testsuite/gdc.test/compilable/test23606.d
version https://git-lfs.github.com/spec/v1
oid sha256:09bde5d3b6f27d350e7a59a48ad47a013be6a616034b6b9c808f6f5028edf26c
size 154
